--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.KELOMPOK1_XIIPPLG2"
         tools:targetApi="31">
         <activity
+            android:name=".adapter_detail_pesanan"
+            android:exported="false" />
+        <activity
+            android:name=".dbDeatilPesanan"
+            android:exported="false" />
+        <activity
             android:name=".detail_pesanan"
             android:exported="false" />
         <activity
